Initial implementation of the website's responsiveness

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -1,4 +1,9 @@
 {
+  "navigation": {
+    "home": "Home",
+    "about": "About",
+    "portfolio": "Portfolio"
+  },
   "about": {
     "name": "André Silva - Web Developer",
     "description": "Hello, I'm a web developer located in Oporto, Portugal. Forever a surfing and travel lover while coding away in his Macbook Pro - which is obviously owned by the company I currently work at.",
