Initial development of the portfolio page

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -5,7 +5,8 @@
     "portfolio": "Portfolio"
   },
   "about": {
-    "name": "André Silva - Web Developer",
+    "pageTitle": "About Me",
+    "title": "André Silva - Web Developer",
     "description": "Hello, I'm a web developer located in Oporto, Portugal. Forever a surfing and travel lover while coding away in his Macbook Pro - which is obviously owned by the company I currently work at.",
     "info": {
       "birthday": "Birthday:",
@@ -18,5 +19,9 @@
       "studyAnswer": "Instituto Engenharia do Porto"
     },
     "technologies": "Technologies"
+  },
+  "portfolio": {
+    "pageTitle": "Portfolio",
+    "title": "Portfolio"
   }
 }
