Initial implementation of the Portfolio carousel

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -22,6 +22,9 @@
   },
   "portfolio": {
     "pageTitle": "Portfolio",
-    "title": "Portfolio"
+    "title": "Portfolio",
+    "items": {
+      "burberry": "Burberry is a British luxury fashion house headquartered in London, England. It currently designs and distributes ready to wear including trench coats (for which it is most famous), leather goods, footwear, fashion accessories, eye-wear, fragrances, and cosmetics. Established in 1856 by Thomas Burberry, originally focusing on the development of outdoor attire, the house has moved into the high fashion market, developing gabardine, and products made exclusively for the brand. In this project I was one of the frontend developers behind the brand's content and editorial pages used in several campaigns and launches. The concept behind the project consisted in using the ContentStack CMS where the content creators could build the pages using re-usable components that the frontend application would then map into styled React components. To achieve this the project was developed using the React framework Next.js alongside TypeScript, Emotion, HTML 5 and CSS 3."
+    }
   }
 }
