feat: refactor the media breakpoints

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -22,7 +22,7 @@
     "description": "Hello, I'm a web developer located in Oporto, Portugal. Forever a surfing and travel lover while coding away in his Macbook Pro - which is obviously owned by the company I currently work at.",
     "info": {
       "birthday": "Birthday:",
-      "birthdayAnswer": "14/10/1993",
+      "birthdayAnswer": "14th of October 1993",
       "email": "Email:",
       "emailAnswer": "andreemanuel.1993@gmail.com",
       "location": "Location:",
