feat: adds the loading dots to the music page

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -112,6 +112,8 @@
       "title": "Music",
       "description": ""
     },
+    "topAlbumsTitle": "Most Listened Albums",
+    "recentTracksTitle": "Recently Listened Tracks",
     "playCount": "{{playCount}} plays",
     "loadMore": "Load more albums",
     "streamingNow": "Streaming Now",
