feat: creates the generic PropsContext

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -110,7 +110,7 @@
   "music": {
     "seo": {
       "title": "Music",
-      "description": ""
+      "description": "One of my other favourite things to do is listen to music and discover new artists as well."
     },
     "topAlbumsTitle": "Most Listened Albums",
     "recentTracksTitle": "Recently Listened Tracks",
