--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -238,8 +238,8 @@
         }
       },
       "budapest": {
-        "hungarian-parliament-building": {
-          "title": "Hungarian Parliament Building",
+        "hungarian-parliament": {
+          "title": "Hungarian Parliament",
           "description": ""
         },
         "hungarian-national-museum": {
@@ -251,39 +251,39 @@
           "description": ""
         }
       }
+    }
+  },
+  "music": {
+    "seo": {
+      "title": "Music",
+      "description": "One of my other favourite things to do is listen to music and discover new artists as well."
     },
-    "music": {
-      "seo": {
-        "title": "Music",
-        "description": "One of my other favourite things to do is listen to music and discover new artists as well."
+    "topAlbumsTitle": "Most Listened Albums",
+    "topArtistsTitle": "Most Listened Artists",
+    "recentTracksTitle": "Recently Listened Tracks",
+    "playCount": "{{playCount}} plays",
+    "loadMoreAlbums": "Load more albums",
+    "loadMoreArtists": "Load more artists",
+    "streamingNow": "Streaming Now",
+    "statistics": {
+      "scrobbles": "Scrobbles",
+      "tracksLoved": "Tracks Loved",
+      "artistsListened": "Artists",
+      "albumsListened": "Albums"
+    },
+    "filters": {
+      "albums": {
+        "allTime": "All Time",
+        "last7Days": "Last 7 Days",
+        "last30Days": "Last 30 Days",
+        "last90Days": "Last 90 Days",
+        "last180Days": "Last 180 Days",
+        "last365Days": "Last 365 Days"
       },
-      "topAlbumsTitle": "Most Listened Albums",
-      "topArtistsTitle": "Most Listened Artists",
-      "recentTracksTitle": "Recently Listened Tracks",
-      "playCount": "{{playCount}} plays",
-      "loadMoreAlbums": "Load more albums",
-      "loadMoreArtists": "Load more artists",
-      "streamingNow": "Streaming Now",
-      "statistics": {
-        "scrobbles": "Scrobbles",
-        "tracksLoved": "Tracks Loved",
-        "artistsListened": "Artists",
-        "albumsListened": "Albums"
-      },
-      "filters": {
-        "albums": {
-          "allTime": "All Time",
-          "last7Days": "Last 7 Days",
-          "last30Days": "Last 30 Days",
-          "last90Days": "Last 90 Days",
-          "last180Days": "Last 180 Days",
-          "last365Days": "Last 365 Days"
-        },
-        "artists": {
-          "longTerm": "Long Term",
-          "mediumTerm": "Medium Term",
-          "shortTerm": "Short Term"
-        }
+      "artists": {
+        "longTerm": "Long Term",
+        "mediumTerm": "Medium Term",
+        "shortTerm": "Short Term"
       }
     }
   }
