feat: changes to the About page

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -24,17 +24,7 @@
       "description": "Hello, I'm a web developer located in Oporto, Portugal. Forever a surfing and travel lover while coding away in his Macbook Pro - which is obviously owned by the company I currently work at."
     },
     "title": "André Silva - Web Developer",
-    "description": "Hello, I'm a web developer located in Oporto, Portugal. Forever a surfing and travel lover while coding away in his Macbook Pro - which is obviously owned by the company I currently work at.",
-    "info": {
-      "birthday": "Birthday:",
-      "birthdayAnswer": "14th of October 1993",
-      "email": "Email:",
-      "emailAnswer": "andreemanuel.1993@gmail.com",
-      "location": "Location:",
-      "locationAnswer": "Matosinhos, Oporto, Portugal",
-      "study": "Study:",
-      "studyAnswer": "Instituto Engenharia do Porto"
-    },
+    "description": "Hello, I'm a web developer located in Oporto, Portugal. Forever a sports (mostly surfing and everything racket-related) and travel lover while coding away in his MacBook Pro - which is obviously owned by the company I currently work at. I'm also very passionate when it comes to music and movies spending countless hours inside the cinema theaters. Also really enjoy photography but as of now, it's only a hobby fulfilled by my faithful iPhone and Photos app for simple color and lighting edition - a sentence which would make any professional photographer wince.",
     "technologies": "Technologies"
   },
   "portfolio": {
