feat: continuous implementation of the MUI components

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -307,7 +307,7 @@
   "movies": {
     "seo": {
       "title": "Movies",
-      "description": ""
+      "description": "As seen in the about page, I'm an avid movie watcher as well and in here I keep record of all the movies that I've seen"
     },
     "filters": {
       "name": "Filter by name"
