chore: continuous implementation on the Movies page

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -334,6 +334,7 @@
       "biography": "Biography"
     },
     "titles": {
+      "coco": "Coco",
       "the-gentlemen": "The Gentlemen",
       "the-power-of-the-dog": "The Power Of The Dog",
       "spider-man-no-way-home": "Spider-Man: No Way Home",
