feat: continuous implementation of the Italy trip

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -272,7 +272,7 @@
       "milan": {
         "galleria-vittorio-emanuele-ii": {
           "title": "Galleria Vittorio Emanuele II",
-          "description": ""
+          "description": "The Galleria Vittorio Emanuele II, which is sometimes nicknamed 'il salotto di Milano' (Milan's drawing room), is an elegant nineteenth-century shopping arcade. It houses some of the most luxurious boutiques in Milan. The structure built between 1865 and 1877 is formed by two arcades shaped like a Latin cross covered by a glass and iron dome. The Galleria is located between two of the main monuments in Milan: il Duomo and the Teatro alla Scala. In our opinion, this magnificent shopping arcade is one of the most interesting sights in Milan. The Galleria Vittorio Emanuele II contains brands such as Prada, Gucci and Louis Vuitton, as well as other high-end boutiques. It also houses numerous well-decorated restaurants, including some of the oldest establishments of Milan such as Café Biffi, founded in 1867. Surprisingly, visitors can also find a McDonald's in the Gallery. This said, the fast-food restaurant is beautifully decorated with black columns and gold decoration to blend in with the other establishments. It has a comfortable terrace to sit in and have an inexpensive drink, while enjoying the atmosphere and elegance of this stunning building."
         }
       }
     }
