fix: properly implements lazy loading on the images page

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -369,6 +369,14 @@
       "biography": "Biography"
     },
     "titles": {
+      "mystic-river": "Mystic River",
+      "me-before-you": "Me Before You",
+      "american-sniper": "American Sniper",
+      "top-gun-maverick": "Top Gun: Maverick",
+      "howls-moving-castle": "Howl's Moving Castle",
+      "the-grand-budapest-hotel": "The Grand Budapest Hotel",
+      "everything-everywhere-all-at-once": "Everything Everywhere All At Once",
+      "doctor-strange-in-the-multiverse-of-madness": "Doctor Strange In The Multiverse Of Madness",
       "morbius": "Morbius",
       "luca": "Luca",
       "coda": "CODA",
