--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -35,6 +35,7 @@
     },
     "title": "Portfolio",
     "items": {
+      "docker": "Docker allows developers to quickly spin up development and production environments without having to manually install all the needed tools and dependencies using the technology of containerization. Developers can create images based from scratch or based on some popular languages (Node.js / Python) or services (Redis / Nginx) and afterwards only run them with a couple of commands and every service is immediately available. Using docker-compose can make this process even easier since one can specify all the services required for a project in an YAML file and with a single command, start them all simultaneously. Docker Desktop, the project in which I worked on, is an Electron-based application that allows users to interact with the the underlying Docker engine. The UI serves as a complement for the Docker CLI for features more easily done with a graphical interface such as quickly removing multiple containers / images / volumes, checking the volumes file contents, inspecting running containers to check its logs / environment variables / volumes / exposed ports.",
       "burberry": "Burberry is a British luxury fashion house headquartered in London, England. It currently designs and distributes ready to wear including trench coats (for which it is most famous), leather goods, footwear, fashion accessories, eye-wear, fragrances, and cosmetics. Established in 1856 by Thomas Burberry, originally focusing on the development of outdoor attire, the house has moved into the high fashion market, developing gabardine, and products made exclusively for the brand. In this project I was one of the frontend developers behind the brand's content and editorial pages used in several campaigns and launches. The concept behind the project consisted in using the ContentStack CMS where the content creators could build the pages using re-usable components that the frontend application would then map into styled React components. To achieve this the project was developed using the React framework Next.js alongside TypeScript, Emotion, HTML 5 and CSS 3.",
       "tankey": "Tankey is a dutch mobile app which allows their customers in the Netherlands to refuel their cars while saving money in a direct and straight-forward manner. They just have to select the station they're currently at and the fuel pump they're using and as soon as they're ready to pay, the discount has already been provided in the total value. In order for this to work, I had to develop the API which the mobile apps used to create a new fueling session and the consequent communication with the several fuel companies existing in the Netherlands. This was built in Ruby On Rails and PostgreSQL and for monitoring purposes I was also responsible for creating an admin dashboard in which the Tankey shareholders would be able to see which stations were performing the best, which kind of fuel people used the most, the price fluctuation for every single fuel provider in the Netherlands and many other metrics.",
       "carmo": "Carmo is made up of a group of 10 companies based in Portugal, and the whole process of transformation, product creation, and technical development is Portuguese. Carmo offers a wide range of products in the national territory and across borders, in sectors as diverse as agriculture, the equestrian world, construction, tourism, leisure, security, and telecommunications. To promote this brand, I helped develop a website where the users could see their diverse catalogue using HTML 5, CSS 3, PHP framework Yii 2 and jQuery.",
@@ -367,245 +368,6 @@
       "animation": "Animation",
       "adventure": "Adventure",
       "biography": "Biography"
-    },
-    "titles": {
-      "mystic-river": "Mystic River",
-      "me-before-you": "Me Before You",
-      "american-sniper": "American Sniper",
-      "top-gun-maverick": "Top Gun: Maverick",
-      "howls-moving-castle": "Howl's Moving Castle",
-      "the-grand-budapest-hotel": "The Grand Budapest Hotel",
-      "everything-everywhere-all-at-once": "Everything Everywhere All At Once",
-      "doctor-strange-in-the-multiverse-of-madness": "Doctor Strange In The Multiverse Of Madness",
-      "morbius": "Morbius",
-      "luca": "Luca",
-      "coda": "CODA",
-      "encanto": "Encanto",
-      "nightmare-alley": "Nightmare Alley",
-      "the-batman": "The Batman",
-      "the-suicide-squad": "The Suicide Squad",
-      "uncharted": "Uncharted",
-      "the-king": "The King",
-      "death-on-the-nile": "Death On The Nile",
-      "snatch": "Snatch",
-      "the-kings-man": "The King's Man",
-      "the-matrix-reloaded": "The Matrix Reloaded",
-      "nocturnal-animals": "Nocturnal Animals",
-      "call-me-by-your-name": "Call Me By Your Name",
-      "birdman": "Birdman Or (The Unexpected Virtue Of Ignorance)",
-      "dallas-buyers-club": "Dallas Buyers Club",
-      "coco": "Coco",
-      "the-gentlemen": "The Gentlemen",
-      "the-power-of-the-dog": "The Power Of The Dog",
-      "spider-man-no-way-home": "Spider-Man: No Way Home",
-      "dont-look-up": "Don't Look Up",
-      "the-magnificent-seven": "The Magnificent Seven",
-      "the-amazing-spider-man-2": "The Amazing Spider-Man 2",
-      "the-terminal": "The Terminal",
-      "mulholland-dr": "Mulholland Dr.",
-      "house-of-gucci": "House Of Gucci",
-      "red-notice": "Red Notice",
-      "spotlight": "Spotlight",
-      "the-amazing-spider-man": "The Amazing Spider-Man",
-      "gran-torino": "Gran Torino",
-      "eternals": "Eternals",
-      "toy-story-3": "Toy Story 3",
-      "toy-story-2": "Toy Story 2",
-      "toy-story": "Toy Story",
-      "alien": "Alien",
-      "dune": "Dune",
-      "fantastic-beasts-and-where-to-find-them": "Fantastic Beasts And Where To Find Them",
-      "i-robot": "I, Robot",
-      "kingsman-the-secret-service": "Kingsman: The Secret Service",
-      "kingsman-the-golden-circle": "Kingsman: The Golden Circle",
-      "a-serbian-film": "A Serbian Film",
-      "venom-let-there-carnage": "Venom: Let There Carnage",
-      "ice-age": "Ice Age",
-      "incredibles-2": "Incredibles 2",
-      "hercules": "Hercules",
-      "finding-nemo": "Finding Nemo",
-      "the-incredibles": "The Incredibles",
-      "up": "Up",
-      "zootopia": "Zootopia",
-      "tenet": "Tenet",
-      "erin-brockovich": "Erin Brockovich",
-      "hitman-wife-bodyguard": "Hitman's Wife's Bodyguard",
-      "baby-driver": "Baby Driver",
-      "mortal-kombat": "Mortal Kombat",
-      "dont-breathe-2": "Don't Breathe 2",
-      "dont-breathe": "Don't Breathe",
-      "the-conjuring": "The Conjuring",
-      "the-conjuring-2": "The Conjuring 2",
-      "the-conjuring-the-devil-made-me-do-it": "The Conjuring: The Devil Made Me Do It",
-      "glass": "Glass",
-      "split": "Split",
-      "a-quiet-place": "A Quiet Place",
-      "a-quiet-place-part-ii": "A Quiet Place Part II",
-      "arrival": "Arrival",
-      "the-shape-of-water": "The Shape Of Water",
-      "hereditary": "Hereditary",
-      "the-guilty": "The Guilty",
-      "free-guy": "Free Guy",
-      "annabelle-comes-home": "Annabelle Comes Home",
-      "the-shining": "The Shining",
-      "the-nun": "The Nun",
-      "mother": "Mother!",
-      "gone-girl": "Gone Girl",
-      "madagascar": "Madagascar",
-      "pirates-of-the-caribbean-the-curse-of-the-black-pearl": "Pirates Of The Caribbean: The Curse Of The Black Pearl",
-      "spider-man": "Spider-Man",
-      "shazam": "Shazam!",
-      "spider-man-homecoming": "Spider-Man: Homecoming",
-      "suicide-squad": "Suicide Squad",
-      "donnie-darko": "Donnie Darko",
-      "requiem-for-a-dream": "Requiem For A Dream",
-      "now-you-see-me": "Now You See Me",
-      "i-am-legend": "I Am Legend",
-      "catch-me-if-you-can": "Catch Me If You Can",
-      "black-swan": "Black Swan",
-      "her": "Her",
-      "dunkirk": "Dunkirk",
-      "the-imitiation-game": "The Imitation Game",
-      "a-beautiful-mind": "A Beautiful Mind",
-      "the-godfather": "The Godfather",
-      "ex-machina": "Ex Machina",
-      "no-country-for-old-men": "No Country For Old Men",
-      "nightcrawler": "Nightcrawler",
-      "prisoners": "Prisoners",
-      "full-metal-jacket": "Full Metal Jacket",
-      "memento": "Memento",
-      "john-wick": "John Wick",
-      "john-wick-chapter-2": "John Wick: Chapter 2",
-      "john-wick-chapter-3-parabellum": "John Wick: Chapter 3 - Parabellum",
-      "drive": "Drive",
-      "knives-out": "Knives Out",
-      "12-years-a-slave": "12 Years A Slave",
-      "twelve-monkeys": "Twelve Monkeys",
-      "the-usual-suspects": "The Usual Suspects",
-      "harry-potter-and-the-sorcerers-stone": "Harry Potter And The Sorcerer's Stone",
-      "harry-potter-and-the-chamber-of-secrets": "Harry Potter And The Chamber Of Secrets",
-      "harry-potter-and-the-prisoner-of-azkaban": "Harry Potter And The Prisoner Of Azkaban",
-      "harry-potter-and-the-goblet-of-fire": "Harry Potter And The Goblet Of Fire",
-      "harry-potter-and-the-order-of-the-phoenix": "Harry Potter And The Order Of The Phoenix",
-      "harry-potter-and-the-half-blood-prince": "Harry Potter And The Half-Blood Prince",
-      "harry-potter-and-the-deathly-hallows-part-1": "Harry Potter And The Deathly Hallows: Part 1",
-      "harry-potter-and-the-deathly-hallows-part-2": "Harry Potter And The Deathly Hallows: Part 2",
-      "bohemian-rhapsody": "Bohemian Rhapsody",
-      "soul": "Soul",
-      "spider-man-into-the-spider-verse": "Spider-Man: Into The Spider-Verse",
-      "escape-room": "Escape Room",
-      "cube": "Cube",
-      "spider-man-far-from-home": "Spider-Man: Far From Home",
-      "hacksaw-ridge": "Hacksaw Ridge",
-      "midsommar": "Midsommar",
-      "the-social-network": "The Social Network",
-      "argo": "Argo",
-      "inside-man": "Inside Man",
-      "minority-report": "Minority Report",
-      "captain-america-the-winter-soldier": "Captain America: The Winter Soldier",
-      "shang-chi-and-the-legend-of-the-ten-rings": "Shang-Chi And The Legend Of The Ten Rings",
-      "black-widow": "Black Widow",
-      "three-billboards-outside-ebbing-missouri": "Three Billbords Outside Ebbing, Missouri",
-      "blackkkansman": "BlacKkKlansman",
-      "jojo-rabbit": "Jojo Rabbit",
-      "come-play": "Come Play",
-      "one-flew-over-the-cuckoo-nest": "One Flew Over The Cuckoo's Nest",
-      "there-will-be-blood": "There Will Be Blood",
-      "the-departed": "The Departed",
-      "american-psycho": "American Psycho",
-      "spirited-away": "Spirited Away",
-      "goodfellas": "Goodfellas",
-      "shutter-island": "Shutter Island",
-      "the-boy-who-harnessed-the-wind": "The Boy Who Harnessed The Wind",
-      "taxi-driver": "Taxi Driver",
-      "whiplash": "Whiplash",
-      "zodiac": "Zodiac",
-      "el-hoyo": "El Hoyo",
-      "how-to-train-your-dragon": "How To Train Your Dragon",
-      "us": "Us",
-      "get-out": "Get Out",
-      "parasite": "Parasite",
-      "1917": "1917",
-      "dead-poets-society": "Dead Poets Society",
-      "a-clockwork-orange": "A Clockwork Orange",
-      "batman-begins": "Batman Begins",
-      "the-dark-knight": "The Dark Knight",
-      "the-dark-knight-rises": "The Dark Knight Rises",
-      "the-irishman": "The Irishman",
-      "scarface": "Scarface",
-      "green-book": "Green Book",
-      "the-two-popes": "The Two Popes",
-      "el-camino-a-breaking-bad-movie": "El Camino: A Breaking Bad Movie",
-      "logan": "Logan",
-      "the-revenant": "The Revenant",
-      "oldboy": "Oldboy",
-      "the-prestige": "The Prestige",
-      "american-history-x": "American History X",
-      "cidade-de-deus": "Cidade De Deus",
-      "the-lord-of-the-rings-the-fellowship-of-the-ring": "The Lord Of The Rings: The Fellowship Of The Ring",
-      "the-lord-of-the-rings-the-two-towers": "The Lord Of The Rings: The Two Towers",
-      "the-lord-of-the-rings-the-return-of-the-king": "The Lord Of The Rings: The Return Of The King",
-      "the-shawshank-redemption": "The Shawshank Redemption",
-      "avengers-infinity-war": "Avengers: Infinity War",
-      "avengers-endgame": "Avengers: Endgame",
-      "captain-marvel": "Captain Marvel",
-      "aquaman": "Aquaman",
-      "venom": "Venom",
-      "ant-man": "Ant-Man",
-      "guardians-of-the-galaxy": "Guardians Of The Galaxy",
-      "guardians-of-the-galaxy-vol-2": "Guardians Of The Galaxy Vol. 2",
-      "thor-ragnarok": "Thor: Ragnarok",
-      "doctor-strange": "Doctor Strange",
-      "black-panther": "Black Panther",
-      "deadpool": "Deadpool",
-      "deadpool-2": "Deadpool 2",
-      "blade-runner-2049": "Blade Runner 2049",
-      "bird-box": "Bird Box",
-      "trainspotting": "Trainspotting",
-      "t2-trainspotting": "T2 Trainspotting",
-      "the-lion-king": "The Lion King",
-      "wall-e": "WALL-E",
-      "the-big-short": "The Big Short",
-      "the-wolf-of-wall-street": "The Wolf Of Wall Street",
-      "big-hero-6": "Big Hero 6",
-      "the-dictator": "The Dictator",
-      "atomic-blonde": "Atomic Blonde",
-      "wonder-woman": "Wonder Woman",
-      "the-martian": "The Martian",
-      "it": "It",
-      "it-chapter-two": "It Chapter Two",
-      "inglorious-basterds": "Inglorious Basterds",
-      "the-hateful-eight": "The Hateful Eight",
-      "reservoir-dogs": "Reservoir Dogs",
-      "eternal-sunshine-of-the-spotless-mind": "Eternal Sunshine Of The Spotless Mind",
-      "forrest-gump": "Forrest Gump",
-      "inception": "Inception",
-      "django-unchained": "Django Unchained",
-      "pulp-fiction": "Pulp Fiction",
-      "batman-v-superman-dawn-of-justice": "Batman v Superman: Dawn Of Justice",
-      "captain-america-civil-war": "Captain America: Civil War",
-      "everest": "Everest",
-      "mad-max-fury-road": "Mad Max: Fury Road",
-      "interstellar": "Interstellar",
-      "se7en": "Se7en",
-      "2001-a-space-odyssey": "2001: A Space Odyssey",
-      "dr-strangelove-or-how-i-learned-to-stop-worrying-and-love-the-bomb": "Dr. Strangelove Or: How I Learned To Stop Worrying And Love The Bomb",
-      "kill-bill-vol-1": "Kill Bill: Vol. 1",
-      "kill-bill-vol-2": "Kill Bill: Vol. 2",
-      "the-big-lebowski": "The Big Lebowski",
-      "the-descent": "The Descent",
-      "the-silence-of-the-lambs": "The Silence Of The Lambs",
-      "saw": "Saw",
-      "unfriended": "Unfriended",
-      "the-exorcism-of-emily-rose": "The Exorcism Of Emily Rose",
-      "the-strangers": "The Strangers",
-      "the-others": "The Others",
-      "rec": "[Rec]",
-      "once-upon-a-time-in-hollywood": "Once Upon A Time In... Hollywood",
-      "ford-v-ferrari": "Ford v Ferrari",
-      "joker": "Joker",
-      "the-fast-and-the-furious": "The Fast And The Furious",
-      "justice-league": "Justice League"
     }
   }
 }
