fix: adds the documentary genre translation

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -201,7 +201,8 @@
       "thriller": "Thriller",
       "animation": "Animation",
       "adventure": "Adventure",
-      "biography": "Biography"
+      "biography": "Biography",
+      "documentary": "Documentary"
     }
   }
 }
