feat: continuous improvement on the website's styles

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -25,6 +25,7 @@
       "description": "Hello, I'm a web developer located in Oporto, Portugal. Forever a surfing and travel lover while coding away in his Macbook Pro - which is obviously owned by the company I currently work at."
     },
     "title": "André Silva - Web Developer",
+    "about-me": "About Me",
     "description": "Hello, I'm a web developer located in Oporto, Portugal. Forever a sports (mostly surfing and everything racket-related) and travel lover while coding away in his MacBook Pro - which is obviously owned by the company I currently work at. I'm also very passionate when it comes to music and movies spending countless hours inside the cinema theaters. Also really enjoy photography but as of now, it's only a hobby fulfilled by my faithful iPhone and Photos app for simple color and lighting edition - a sentence which would make any professional photographer wince.",
     "technologies": "Technologies"
   },
@@ -145,6 +146,7 @@
       "title": "Music",
       "description": "One of my other favourite things to do is listen to music and discover new artists as well."
     },
+    "title": "Music",
     "topAlbumsTitle": "Most Listened Albums",
     "topArtistsTitle": "Most Listened Artists",
     "recentTracksTitle": "Recently Listened Tracks",
@@ -179,6 +181,7 @@
       "title": "Movies",
       "description": "As seen in the about page, I'm an avid movie watcher as well and in here I keep record of all the movies that I've seen"
     },
+    "title": "Movies",
     "filters": {
       "name": "Filter by name"
     },
