--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -150,7 +150,8 @@
         "the-met": "The Metropolitan Museum of Art",
         "radio-city-music-hall": "Radio City Music Hall",
         "madison-square-garden": "Madison Square Garden",
-        "one-world-observatory": "One World Observatory"
+        "one-world-observatory": "One World Observatory",
+        "34-street-herald-sq-station": "34 Street - Herald Sq Station"
       }
     }
   },
