feat: adds more photos to the NY trip

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -146,8 +146,11 @@
         "moma": "Museum of Modern Art",
         "oculus-station": "Oculus Station",
         "brooklyn-bridge": "Brooklyn Bridge",
+        "madame-tussauds": "Madame Tussauds",
         "helicopter-ride": "Helicopter Ride",
+        "statue-of-liberty": "Statue of Liberty",
         "the-met": "The Metropolitan Museum of Art",
+        "ed-sullivan-theater": "Ed Sullivan Theater",
         "radio-city-music-hall": "Radio City Music Hall",
         "madison-square-garden": "Madison Square Garden",
         "one-world-observatory": "One World Observatory",
