feat: use server components for layout and separate context providers

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -20,7 +20,7 @@
   },
   "about": {
     "seo": {
-      "title": "About Me",
+      "title": "About Me | André Silva",
       "description": "Hello, I'm a web developer located in Oporto, Portugal. Forever a surfing and travel lover while coding away in his Macbook Pro - which is obviously owned by the company I currently work at."
     },
     "title": "André Silva - Web Developer",
