feat: continuous implementation of the Bavaria / Austria trip

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -159,6 +159,7 @@
       },
       "bavaria-austria": {
         "konigsee": "Konigsee",
+        "walchensee": "Walchensee",
         "hallstatt": "Hallstatt",
         "neuschwanstein-castle": "Neuschwanstein Castle",
         "dachau-concentration-camp": "Dachau Concentration Camp",
