feat: add photos of the Munich Residenz

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -162,6 +162,7 @@
         "hallstatt": "Hallstatt",
         "walchensee": "Walchensee",
         "marienplatz": "Marienplatz",
+        "munich-residenz": "Munich Residenz",
         "nymphenburg-palace": "Nymphenburg Palace",
         "neuschwanstein-castle": "Neuschwanstein Castle",
         "dachau-concentration-camp": "Dachau Concentration Camp",
