feat: adds photo of Salzburg Cathedral

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -163,6 +163,7 @@
         "walchensee": "Walchensee",
         "marienplatz": "Marienplatz",
         "munich-residenz": "Munich Residenz",
+        "salzburg-cathedral": "Salzburg Cathedral",
         "nymphenburg-palace": "Nymphenburg Palace",
         "neuschwanstein-castle": "Neuschwanstein Castle",
         "dachau-concentration-camp": "Dachau Concentration Camp",
